2002-10-08  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.h (cobc_program_spec): New member `loop_counter'.
	* parser.y (perform_option): Increment loop_counter.
	* codegen.c (loop_counter, loop_counter_max): Removed.
	(output_perform): Declare loop_counter as a local variable.
	(global_label, output_switch): Removed.
	(output_perform_call): Don't use global_label.
	(codegen): Merge codegen_1.  Traverse the tree only once.

2002-10-06  Keisuke Nishida  <knishida@netlab.jp>

	* Integrate numeric expressions and conditional expressions.
	* tree.h (cobc_tag_cond, cobc_cond_type, cobc_cond): Removed.
	(make_negative): New macro.
	* tree.c (make_expr): Build conditional as well.
	(make_cond, make_negative): Removed.
	* codegen.c, inline.c, parser.y: Updated.

2002-10-06  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_evaluate): Removed.
	* tree.c (make_evaluate): Removed.
	* codegen.c (output_tree): Do not handle cobc_evaluate.
	(output_evaluate, output_evaluate_test): Removed.
	* parser.y (make_evaluate, make_evaluate_test): Build evaluate tree.

2002-10-02  Keisuke Nishida  <knishida@netlab.jp>

	* parser.y (CONDITIONAL_NAME): Removed.
	(condition_name_list, condition_name, qualified_cond_name): Removed.
	(data_name, expr_item): Handle conditional names here.
	* scanner.l: Don't return CONDITIONAL_NAME.

2002-10-02  Keisuke Nishida  <knishida@netlab.jp>

	* Rename `label_name' to `label'.
	* Rename `file_name' to `file'.

2002-10-01  Keisuke Nishida  <knishida@netlab.jp>

	* tree.h (cobc_tag_register, cobc_register): Removed.
	* tree.c (make_register): Removed.

2002-09-30  Keisuke Nishida  <knishida@netlab.jp>

	* cobc.h (COBC_PACKAGE): Use PACKAGE_NAME.

2002-09-29  Keisuke Nishida  <knishida@netlab.jp>

	* codegen.c (output_file_name): Updated for new cob_file scheme.
	* parser.y (sort_keys): Rename `cob_sort_keys' to `cob_sort_init'.

2002-09-28  Keisuke Nishida  <knishida@netlab.jp>

	* tree.c (init_constants): Typo fixed.  Thanks to Mike Black.
